--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bat Cave</title>
+    <style>
+        #renderCanvas {
+          height: 100%;
+          width: 100%
+        }
+      </style>
 </head>
 <body>
     <div id='root'></div>
+    <canvas id='renderCanvas' touch-action="none"></canvas>
     <script type='text/javascript' src='./src/main.js'></script>
 </body>
 </html>
