--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <canvas id='renderCanvas' touch-action="none"></canvas>
+    <button id="reset-board">Reset Board</button>
     <script type='text/javascript' src='./src/main.js'></script>
   </div>
 </body>
