--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <canvas id='renderCanvas' touch-action="none"></canvas>
     <button id="reset-board">Reset Board</button>
-    <script type='text/javascript' src='./src/main.js'></script>
+    <script src='./src/main.js'></script>
   </div>
 </body>
 </html>
