--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <canvas id='renderCanvas' touch-action="none"></canvas>
     <button id="reset-board">Reset Board</button>
+    <button id="join-room">Join Room</button>
     <script src='./src/main.js'></script>
   </div>
 </body>
