base seperation of offline/online done

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         <div class="game-settings">
           <p>Game Settings</p>
           <p>Add hide/show with game start</p>
+          <button id="undo-turn">Undo Turn</button>
           <button id="reset-board">Reset Board</button>
+          <button id="request-draw">Request Draw</button>
+          <button id="resign-game">Resign Game</button>
        </div>
     </div>
     <div class="middle-content">
