various updates, testing light reflection on model

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="middle-content">
       <div id='intro'>
         <h2>Welcome to the best place to play 3D chess online!</h2>
-        <h2>No account required, just send invite code to your friend and start playing</h2>
+        <h2 id="intro2">No account required, just send invite code to your friend and start playing</h2>
         <h2>сыграем!! sygrayem!!</h2>
     </div>
       <canvas id='renderCanvas' touch-action="none"></canvas>
