major refactor to main page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
       <div class="navbar">
-        <img src="assets/chess pic.png">
+        <img src="assets/chess-pic.png">
         <button id="home">Home</button>
         <button id="start-game">Start Offline Game -<br>Player vs Player</button>
         <button id="create-room">Create Online Room</button>
