refactor: more typescript

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
   <canvas id='renderCanvas' touch-action="none"></canvas>
 </body>
-<script src='./src/main.js'></script>
+<script src='./src/main.ts'></script>
 </body>
 </html>
