test: screen orientation on screen size

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" type="text/css" href="./index.css"></link>
 </head>
 <body>
-  <canvas id='renderCanvas' touch-action="none"></canvas>
+  <div class="app">
+    <canvas id='renderCanvas' touch-action="none"></canvas>
+    <button id="startOG">Start Offline Game</button>
+    <div class="gameButtons">
+      <button id="home">Home Screen</button>
+      <button id="resetBoard">Reset Board</button>
+      <button id="camera">Camera Reset</button>
+    </div>
+  </div>
+
 </body>
 <script src='./src/main.ts'></script>
 </body>
