refactor: changed GUI to HTML/CSS

--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
 </head>
 <body>
   <div class="app">
+    <div id="gameButtons">
+      <button id="home">Home</button>
+      <button id="resetBoard">Reset</button>
+      <button id="camera">Camera</button>
+    </div>
     <canvas id='renderCanvas' touch-action="none"></canvas>
     <button id="startOG">Start Offline Game</button>
-    <div class="gameButtons">
-      <button id="home">Home Screen</button>
-      <button id="resetBoard">Reset Board</button>
-      <button id="camera">Camera Reset</button>
-    </div>
   </div>
-
 </body>
 <script src='./src/main.ts'></script>
 </body>
