feat: undo move button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <button id="home">Home</button>
       <button id="resetBoard">Reset</button>
       <button id="camera">Camera</button>
+      <button id="undo">Undo</button>
     </div>
     <canvas id='renderCanvas' touch-action="none"></canvas>
     <button id="startOG">Start Offline Game</button>
