build: online match testing

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     </div>
     <canvas id='renderCanvas' touch-action="none"></canvas>
     <button id="startOG">Start Offline Game</button>
+    <button id="createOnlineMatch">Create Online Match</button>
+    <button id="joinOnlineMatch">Join Online Match</button>
   </div>
 </body>
 <script src='./src/main.ts'></script>
