build: creating online modal/game options

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" type="text/css" href="./index.css"></link>
 </head>
 <body>
-  <div id="loading">
+  <!-- <div id="loading">
     <p>Loading</p>
-  </div>
+  </div> -->
   <div class="app">
     <div id="gameOverlay">
       <button id="home">Home</button>
@@ -18,11 +18,11 @@
       <button id="undo">Undo</button>
       <div id="timer">
       <div id="player1">
-        <img id="avatar1" src="assets/white-player.png"><div id="timer1">1200</div>
+        <img id="avatar1" src="assets/white-player.png"><div id="timer1">-</div>
       </div>
       <button id="pause">Pause</button>
       <div id="player2">
-        <img id="avatar2" src="assets/black-player.png"><div id="timer2">1200</div>
+        <img id="avatar2" src="assets/black-player.png"><div id="timer2">-</div>
       </div>
     </div>
     </div>
