build: parcel 2 transformer for gltf

--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
     <button id="joinOnlineMatch">Join Online Match</button>
   </div>
 </body>
-<script src='./src/main.ts'></script>
+<script type="module" src='./src/main.ts'></script>
 </body>
 </html>
