build: switched to webpack

--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,11 @@
       <button id="undo">Undo</button>
       <div id="timer">
       <div id="player1">
-        <img id="avatar1" src="assets/white-player.png"><div id="timer1">-</div>
+        <!-- <img id="avatar1" src="../assets/white-player.png"><div id="timer1">-</div> -->
       </div>
       <button id="pause">Pause</button>
       <div id="player2">
-        <img id="avatar2" src="assets/black-player.png"><div id="timer2">-</div>
+        <!-- <img id="avatar2" src="../assets/black-player.png"><div id="timer2">-</div> -->
       </div>
     </div>
     </div>
@@ -32,6 +32,6 @@
     <button id="joinOnlineMatch">Join Online Match</button>
   </div>
 </body>
-<script type="module" src='./src/main.ts'></script>
+<script type="module" src='/dist/main.js'></script>
 </body>
 </html>
