--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My App</title>
-    <link rel="stylesheet" href="client.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div id="root"></div>
-    <script src="client.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
