--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My App</title>
+    <meta name="keywords" content="3D Chess, Free Chess, Online Chess, Play Chess, Chess">
+    <meta name="description" content="Play 3D chess with your friends online for free">
+    <meta name="author" content="Eliya Vahl">
+      <title>3D Chess</title>
+      <style>
+        body{background-color: black;}
+      </style>
     <link rel="stylesheet" href="/index.css">
 </head>
 <body>
