--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="/index.css">
 </head>
 <body>
+  <canvas id="app-canvas" style="background-color: black;"></canvas>
     <div id="root"></div>
-    <script type="module" src="/index.js"></script>
+    <script type="module" src="/index.js" defer></script>
 </body>
 </html>
