fix: scene manager to outside of react

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,13 @@
 </head>
 <body>
   <canvas id="app-canvas" style="background-color: black;"></canvas>
-    <div id="root"></div>
+    <div id="root">
+      <div class="screen">
+        <div class="loading screen">
+          <p>Loading...</p>
+        </div>
+      </div>
+    </div>
     <script type="module" src="/index.js" defer></script>
 </body>
 </html>
