--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,14 @@
     <link rel="stylesheet" href="/index.css">
 </head>
 <body>
-    <div id="root"></div>
-    <script type="module" src="/index.js"></script>
+  <canvas id="app-canvas" style="background-color: black;"></canvas>
+    <div id="root">
+      <div class="screen">
+        <div class="loading screen">
+          <p>Loading...</p>
+        </div>
+      </div>
+    </div>
+    <script type="module" src="/index.js" defer></script>
 </body>
 </html>
