--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,18 @@
     <meta name="keywords" content="3D Chess, Free Chess, Online Chess, Play Chess, Chess">
     <meta name="description" content="Play 3D chess with your friends online for free">
     <meta name="author" content="Eliya Vahl">
-      <title>3D Chess</title>
-      <style>
-        body{background-color: black;}
-      </style>
+    <title>3D Chess</title>
+    <style>
+      body{background-color: black;}
+    </style>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="/index.css">
+    <script>
+      if('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/sw.js', { scope: '/' });
+      }
+    </script>
 </head>
 <body>
   <canvas id="app-canvas" style="background-color: black;"></canvas>
