build: add tailwindcss build and output

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     </style>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/index-tailwind-output.css">
     <script>
       if('serviceWorker' in navigator) {
         navigator.serviceWorker.register('/sw.js', { scope: '/' });
