refactor: home screen mobile css

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,9 @@
     </script>
 </head>
 <body>
+  <canvas
+  id="app-canvas" class="absolute w-screen h-screen bg-black -z-10"
+></canvas>
     <div id="root">
       <div class="screen">
         <div class="loading screen">
