fix: canvas clicking

--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,9 @@
 </head>
 <body>
   <canvas
-  id="app-canvas" class="absolute w-screen h-screen bg-black -z-10"
+  id="app-canvas" class="fixed h-dvh w-dvw outline-none z-0 bg-black"
 ></canvas>
-    <div id="root">
+    <div id="root" class="h-dvh w-dvw">
       <div class="screen">
         <div class="loading screen">
           <p>Loading...</p>
