feat: integrate tailwind CSS (#188)
* build: add tailwindcss build and output

* fix: output path

* fix: update tailwind css output

* remove: old styles

* refactor: home screen mobile css

* style: add style breakpoint for home

* refactor: lobby select to tailwind

* WIP: online match lobby

* style: game options and player card to tailwind

* style: offline lobby

* fix: lobby joining error

* wip: online lobby css

* style: online lobby

* style: home page title

* style: message modal

* style: add ready disable opacity

* fix: canvas clicking

* style: fix hover effects

* fix: tailwind output name

* remove: regular class from tailwind declarations

* fix: message modal z-index

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     </style>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/tailwind-output.css">
     <script>
       if('serviceWorker' in navigator) {
         navigator.serviceWorker.register('/sw.js', { scope: '/' });
@@ -20,8 +20,10 @@
     </script>
 </head>
 <body>
-  <canvas id="app-canvas" style="background-color: black;"></canvas>
-    <div id="root">
+  <canvas
+  id="app-canvas" class="fixed h-dvh w-dvw outline-none z-0 bg-black"
+></canvas>
+    <div id="root" class="h-dvh w-dvw">
       <div class="screen">
         <div class="loading screen">
           <p>Loading...</p>
